# anvil-harness

./: .gitignore  CLAUDE.md  README.md  agents.md  pyproject.toml
.github/workflows/: ci.yml
anvil/: __init__.py  adapters.py  budget.py  cli.py  context.py  ledger.py  lifecycle.py  log.py  policy.py  proofgate.py  recovery.py  schemas.py  store.py
tests/: test_budget.py  test_context.py  test_ledger.py  test_lifecycle.py  test_logging.py  test_policy.py  test_proofgate.py  test_recovery.py
